examples/security/gatekeeper/templates/docsapprovedimages.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: docsapprovedimages
spec:
  crd:
    spec:
      names:
        kind: DocsApprovedImages
      validation:
        openAPIV3Schema:
          type: object
          properties:
            prefixes:
              type: array
              minItems: 1
              items:
                type: string
                pattern: ^[a-z0-9.-]+(:[0-9]+)?/([A-Za-z0-9_.-]+/)*$
          required:
          - prefixes
  targets:
  - target: admission.k8s.gatekeeper.sh
    code:
    - engine: Rego
      source:
        version: v1
        rego: "package docsapprovedimages\ncontainers contains c if { c := input.review.object.spec.containers[_]\
          \ }\ncontainers contains c if { c := input.review.object.spec.initContainers[_]\
          \ }\ncontainers contains c if { c := input.review.object.spec.ephemeralContainers[_]\
          \ }\nallowed(image) if {\n  some prefix in input.parameters.prefixes\n \
          \ startswith(image, prefix)\n}\nviolation contains {\"msg\": sprintf(\"\
          unapproved image for container: %v\", [c.name])} if {\n  some c in containers\n\
          \  not allowed(c.image)\n}\n"
